2010-11-02  Kirit Saelensminde  <kirit@felspar.com>
 Catching of incorrect exceptions in tests now shows the full text of the caught exception.

2010-10-01  Kirit Saelensminde  <kirit@felspar.com>
 Improved the display of exceptions by forcing them to use printOn.

2010-09-26  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::string instances are now constructible from a wider range of iterators, including fostlib::string::const_iterator.

2010-09-19  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug in coercion when going between nullable types.

2010-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Data handling
 - Started to add in insert for JSON containers

2010-08-15  Kirit Saelensminde  <kirit@felspar.com>
 Data handling
 - Started adding a push_back function that allows consistent pushing back of data across a wide range of types. Currently supports std::list, std::vector and fostlib::json.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Threading
 - Added accessors to future so that we can see if there is an exception or a if future (result) is available.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Basic library handling
 - Added fost/relops.hpp and started to use it to remove a lot of duplicated code.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Logging
 - Added a YAML record class for outputting YAML log records.

2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
 Parsers
 - Removed the parser instances because they're not thread safe.

2010-04-01  Kirit Saelensminde  <kirit@felspar.com>
 Exception handling
 - Allow us to throw not implemented exceptions based on Boost system errors.

2010-03-29  Kirit Saelensminde  <kirit@felspar.com>
 String handling
 - Added coercion from string::hex_string to std::size_t

2010-03-22  Kirit Saelensminde  <kirit@felspar.com>
 ChangeLog
 - Added ChangeLog