@@ -19,6 +19,7 @@ lib fost-core
         json-parse.cpp
         json-unparse.cpp
         log.cpp
+        parsers.cpp
         pool.cpp
         setting.cpp
         string.cpp
