@@ -1,0 +1,20 @@
+/*
+    Copyright 2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Distributed under the Boost Software License, Version 1.0.
+    See accompanying file LICENSE_1_0.txt or copy at
+        http://www.boost.org/LICENSE_1_0.txt
+*/
+
+
+#include "fost-core.hpp"
+#include <fost/parse/parse.hpp>
+
+
+using namespace fostlib;
+
+
+boost::mutex &fostlib::detail::g_parser_mutex() {
+    static boost::mutex m;
+    return m;
+}
+
